--- a/ScrollViewAutoLayoutExample/Base.lproj/Main.storyboard
+++ b/ScrollViewAutoLayoutExample/Base.lproj/Main.storyboard
@@ -50,6 +50,9 @@
                                                 </constraints>
                                                 <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="15"/>
                                                 <state key="normal" title="Login"/>
+                                                <connections>
+                                                    <action selector="login:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="jqR-ze-j4w"/>
+                                                </connections>
                                             </button>
                                         </subviews>
                                         <color key="backgroundColor" red="0.72549019609999998" green="0.23154237329999999" blue="0.17218144730000001" alpha="1" colorSpace="calibratedRGB"/>
@@ -76,7 +79,7 @@
                                 </connections>
                             </scrollView>
                         </subviews>
-                        <color key="backgroundColor" red="0.72549019609999998" green="0.23154237329999999" blue="0.17218144730000001" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="backgroundColor" red="0.99262845519999998" green="0.65246033670000003" blue="0.66685700420000005" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstItem="1PP-oz-hYs" firstAttribute="top" secondItem="kh9-bI-dsS" secondAttribute="top" id="6Gy-MM-ImT"/>
                             <constraint firstItem="1PP-oz-hYs" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leading" id="8NF-xy-LvP"/>
@@ -89,10 +92,86 @@
                         <outlet property="bottomToScrollView" destination="QgL-cv-HD4" id="Bmf-YZ-oIH"/>
                         <outlet property="contentView" destination="v9j-aO-Xsg" id="bxx-jP-CPu"/>
                         <outlet property="scrollView" destination="1PP-oz-hYs" id="unn-RE-QVd"/>
+                        <segue destination="pWo-3X-xul" kind="custom" identifier="login" customClass="LoginSegue" customModule="ScrollViewAutoLayoutExample" customModuleProvider="target" id="pVu-tZ-miZ"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="252" y="282"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="ixz-qb-fzw">
+            <objects>
+                <viewController id="Ysf-KP-nRY" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="tz7-IW-ZIj"/>
+                        <viewControllerLayoutGuide type="bottom" id="AnC-pf-V0V"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="rxN-11-FWK">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" red="0.99262845519999998" green="0.65246033670000003" blue="0.66685700420000005" alpha="1" colorSpace="calibratedRGB"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="EV8-Xl-q89" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1070" y="1472"/>
+        </scene>
+        <!--Root View Controller-->
+        <scene sceneID="grW-hF-3TG">
+            <objects>
+                <tableViewController clearsSelectionOnViewWillAppear="NO" id="uPR-Ay-YOs" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="5gh-u8-kjd">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <prototypes>
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="cell" id="Jae-U4-rne">
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Jae-U4-rne" id="HDQ-lv-OEf">
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="uPR-Ay-YOs" id="yIX-nK-WhW"/>
+                            <outlet property="delegate" destination="uPR-Ay-YOs" id="4eB-i7-XdI"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" title="Root View Controller" id="EEv-lB-ZNa"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="osP-eC-Rjy" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1888" y="640"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="lfM-pk-O9F">
+            <objects>
+                <navigationController id="jZI-LL-yQZ" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="8jL-v3-BCJ">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="uPR-Ay-YOs" kind="relationship" relationship="rootViewController" id="Co6-QL-keI"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="VXq-2i-4KF" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1070" y="640"/>
+        </scene>
+        <!--Split View Controller-->
+        <scene sceneID="nD5-Bx-6ob">
+            <objects>
+                <splitViewController id="pWo-3X-xul" sceneMemberID="viewController">
+                    <connections>
+                        <segue destination="jZI-LL-yQZ" kind="relationship" relationship="masterViewController" id="9pA-ua-k7E"/>
+                        <segue destination="Ysf-KP-nRY" kind="relationship" relationship="detailViewController" id="Zqr-eM-3Pc"/>
+                    </connections>
+                </splitViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="yQi-Yd-n3B" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="252" y="1090"/>
         </scene>
     </scenes>
 </document>
